force-app/main/default/objects/Campaign_Assignee_Fields_Mapping__mdt/Campaign_Assignee_Fields_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Campaign Assignee Fields Mapping</label>
    <pluralLabel>Campaign Assignee Fields Mapping</pluralLabel>
</CustomObject>