force-app/main/default/objects/Campaign_Assignee_Fields_Mapping__mdt/fields/Account_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Name__c</fullName>
    <label>Account Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>