force-app/main/default/objects/Campaign_Assignee_Fields_Mapping__mdt/fields/AM_Email__c.field-meta.xml
<CustomField>
    <fullName>AM_Email__c</fullName>
    <label>AM Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>