force-app/main/default/objects/Campaign_Assignee_Fields_Mapping__mdt/fields/AM_Lead__c.field-meta.xml
<CustomField>
    <fullName>AM_Lead__c</fullName>
    <label>AM Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>