force-app/main/default/objects/Campaign_Assignee_Fields_Mapping__mdt/fields/AM_Lead_Email__c.field-meta.xml
<CustomField>
    <fullName>AM_Lead_Email__c</fullName>
    <label>AM Lead Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>