force-app/main/default/objects/Campaign_Assignee_Fields_Mapping__mdt/fields/Campaign_Manager__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Manager__c</fullName>
    <label>Campaign Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>