force-app/main/default/objects/Campaign_Assignee_Fields_Mapping__mdt/fields/Campaign_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Manager_Email__c</fullName>
    <label>Campaign Manager Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>