force-app/main/default/objects/Campaign_Assignee_Fields_Mapping__mdt/fields/Seller_Email__c.field-meta.xml
<CustomField>
    <fullName>Seller_Email__c</fullName>
    <label>Seller Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>