force-app/main/default/objects/Campaign_Assignee_Fields_Mapping__mdt/fields/Seller_Name__c.field-meta.xml
<CustomField>
    <fullName>Seller_Name__c</fullName>
    <label>Seller Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>