force-app/main/default/objects/Campaign_Assignee_Fields_Mapping__mdt/fields/Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead__c</fullName>
    <label>Team Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>