force-app/main/default/objects/Campaign_Assignee_Fields_Mapping__mdt/fields/TechOps__c.field-meta.xml
<CustomField>
    <fullName>TechOps__c</fullName>
    <label>TechOps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>