force-app/main/default/objects/Campaign_Assignee_Fields_Mapping__mdt/fields/TechOps_Email__c.field-meta.xml
<CustomField>
    <fullName>TechOps_Email__c</fullName>
    <label>TechOps Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>