force-app/main/default/objects/Campaign_Assignee_Fields_Mapping__mdt/listViews/All_fields.listView-meta.xml
<ListView>
    <fullName>All_fields</fullName>
    <columns>Seller_Email__c</columns>
    <columns>AM_Email__c</columns>
    <columns>AM_Lead_Email__c</columns>
    <columns>Campaign_Manager_Email__c</columns>
    <columns>TechOps_Email__c</columns>
    <columns>Team_Lead__c</columns>
    <filterScope>Everything</filterScope>
    <label>All fields</label>
</ListView>